moved all hilla endpoints to a new 'services-mod' module