@@ -43,26 +43,37 @@
     </modules>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.1</version>
-    </parent>
+
+<!--    <parent>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
+<!--        <version>3.4.1</version>-->
+<!--    </parent>-->
+
     <properties>
         <java.version>21</java.version>
-<!--        <maven.version>3.13.0</maven.version>-->
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <vaadin.version>24.7.0.alpha1</vaadin.version>
-<!--        <spring-boot.version>3.4.1</spring-boot.version>-->
+        <apring-boot.version>3.4.1</apring-boot.version>
+        <vaadin.version>24.6.2</vaadin.version>
+        <hilla.version>${vaadin.version}</hilla.version>
         <spring-ai.version>1.0.0-M5</spring-ai.version>
     </properties>
+
     <repositories>
         <repository>
-            <id>vaadin-prerelease</id>
-            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>https://repo.spring.io/release</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -75,21 +86,31 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-<!--        <repository>-->
-<!--            <id>spring-snapshots</id>-->
-<!--            <name>Spring Snapshots</name>-->
-<!--            <url>https://repo.spring.io/snapshot</url>-->
-<!--            <releases>-->
-<!--                <enabled>false</enabled>-->
-<!--            </releases>-->
-<!--        </repository>-->
+        <repository>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>universityOfManchester-graal</id>
             <url>https://raw.githubusercontent.com/beehive-lab/tornado/maven-tornadovm</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
+
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>3.4.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.ai</groupId>
                 <artifactId>spring-ai-bom</artifactId>
@@ -104,37 +125,39 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-dependencies</artifactId>-->
-<!--                <version>${spring-boot.version}</version>-->
-<!--                <type>pom</type>-->
-<!--                <scope>import</scope>-->
-<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.vaadin/hilla -->
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>hilla</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.vaadin/hilla -->
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>hilla</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.vaadin/hilla-endpoint -->
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>hilla-endpoint</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.vaadin/hilla-parser-jvm-plugin-backbone -->
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>hilla-parser-jvm-plugin-backbone</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.vaadin/hilla-dev -->
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>hilla-dev</artifactId>
+        </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <outputDirectory>${project.parent.basedir}/starter-mod/target</outputDirectory>
-                    <parameters>true</parameters>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
 </project>
